[tool.poetry]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = ""
authors = ["Sergey Shevchenko <sergiishevchenko017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
aiopath = "^0.7.7"
aioshutil = "^1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
